--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <section class="about">
     <h2>About Me</h2>
-    <p>Hi, I’m Alex Leach, and I created Good Pear Computer to help people solve everyday tech issues with confidence and ease. With over 10 years of experience in computer repair, networking, and IT consulting, I’m here to ensure your devices run smoothly—whether it’s a home setup or a remote session. I bring a friendly, no-jargon approach to every session, making tech feel simple and stress-free. Please contact me at GoodPearComputer@gmail.com or at 541-714-5864.</p>
+    <p>Hi, I’m Alex Leach, and I created Good Pear Computer to help people solve everyday tech issues with confidence and ease. With over 10 years of experience in computer repair, networking, and IT consulting, I’m here to ensure your devices run smoothly—whether it’s a home setup or a remote session. I bring a friendly, no-jargon approach to every session, making tech feel simple and stress-free. Please feel free to contact me at <b>GoodPearComputer@gmail.com</b> or at <b>541-714-5864.</b></p>
   </section>
 
   <section id="contact" class="contact-section">
