Holy crap big update woah

--- a/index.html
+++ b/index.html
@@ -12,17 +12,23 @@
     <div class="branding">
       <h1>Good Pear Computer</h1>
       <p>Alex Leach</p>
+      <p>Computer Support & Consulting</p>
     </div>
-    <div class="header-right">
-      <div class="social-icons">
-        <a href="https://www.facebook.com/profile.php?id=61575832847369" target="_blank" aria-label="Facebook">
-          <i class="fab fa-facebook"></i>
-        </a>
-        <a href="https://www.instagram.com/goodpearcomputer/" target="_blank" aria-label="Instagram">
-          <i class="fab fa-instagram"></i>
-        </a>
-      </div>
-    </div>
+   <div class="header-right">
+  <div class="social-icons">
+    <a href="https://www.facebook.com/profile.php?id=61575832847369" target="_blank" aria-label="Facebook">
+      <i class="fab fa-facebook"></i>
+    </a>
+    <a href="https://www.instagram.com/goodpearcomputer/" target="_blank" aria-label="Instagram">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
+  <div class="header-spacer"></div>
+  <div class="header-contact">
+    <a href="mailto:goodpearcomputer@gmail.com" class="contact-button">Email</a>
+    <a href="tel:+15417145864" class="contact-button secondary">Call</a>
+  </div>
+</div>
   </header>
 
   <section class="location">
@@ -49,11 +55,6 @@
     <h2>About Me</h2>
     <p>Hi, I’m Alex Leach, and I created Good Pear Computer to help people solve everyday tech issues with confidence and ease. With over 10 years of experience in computer repair, networking, and IT consulting, I’m here to ensure your devices run smoothly—whether it’s a home setup or a remote session. I bring a friendly, no-jargon approach to every session, making tech feel simple and stress-free.</p>
     <p>Please feel free to contact me at <b>GoodPearComputer@gmail.com</b> or at <b>541-714-5864.</b></p>
-  </section>
-
-  <section id="contact" class="contact-section">
-    <a href="mailto:goodpearcomputer@gmail.com" class="contact-button">Email</a>
-    <a href="tel:+15417145864" class="contact-button secondary">Call</a>
   </section>
 </body>
 </html>
