--- a/index.html
+++ b/index.html
@@ -9,26 +9,28 @@
 </head>
 <body>
   <header class="header">
-    <div class="branding">
-      <h1>Good Pear Computer</h1>
-      <p>Alex Leach</p>
-      <p>Computer Support & Consulting</p>
+    <div class="header-container">
+      <div class="branding">
+        <h1>Good Pear Computer</h1>
+        <p>Alex Leach</p>
+        <p>Computer Support & Consulting</p>
+      </div>
+      <div class="header-right">
+        <div class="social-icons">
+          <a href="https://www.facebook.com/profile.php?id=61575832847369" target="_blank" aria-label="Facebook">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <a href="https://www.instagram.com/goodpearcomputer/" target="_blank" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </div>
+        <div class="header-spacer"></div>
+        <div class="header-contact">
+          <a href="mailto:goodpearcomputer@gmail.com" class="contact-button">Email</a>
+          <a href="tel:+15417145864" class="contact-button secondary">Call</a>
+        </div>
+      </div>
     </div>
-   <div class="header-right">
-  <div class="social-icons">
-    <a href="https://www.facebook.com/profile.php?id=61575832847369" target="_blank" aria-label="Facebook">
-      <i class="fab fa-facebook"></i>
-    </a>
-    <a href="https://www.instagram.com/goodpearcomputer/" target="_blank" aria-label="Instagram">
-      <i class="fab fa-instagram"></i>
-    </a>
-  </div>
-  <div class="header-spacer"></div>
-  <div class="header-contact">
-    <a href="mailto:goodpearcomputer@gmail.com" class="contact-button">Email</a>
-    <a href="tel:+15417145864" class="contact-button secondary">Call</a>
-  </div>
-</div>
   </header>
 
   <section class="location">
