Aw yeah this is the one.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="header-container">
       <div class="branding">
         <h1>Good Pear Computer</h1>
-        <p>Alex Leach</p>
         <p>Computer Support & Consulting</p>
+        <p>Provided By Alex Leach</p>
       </div>
       <div class="header-right">
         <div class="social-icons">
@@ -34,7 +34,7 @@
   </header>
 
   <section class="location">
-    <p>Serving Corvallis, OR</p>
+    <p>Serving Philomath and Corvallis, OR!</p>
   </section>
 
   <section class="featured-picture">
@@ -43,6 +43,8 @@
 
   <section class="services">
     <h2>Services</h2>
+    <h3><i>Starting at $50 per session (1 hour) and $20 per additional hour.</i></h3>
+    <!-- <p><i>I'm still working on elaborating here. Stay tuned!</i></p> -->
     <div class="service-grid">
       <div class="service-box">Installation</div>
       <div class="service-box">Tech Support</div>
@@ -55,8 +57,14 @@
 
   <section class="about">
     <h2>About Me</h2>
-    <p>Hi, I’m Alex Leach, and I created Good Pear Computer to help people solve everyday tech issues with confidence and ease. With over 10 years of experience in computer repair, networking, and IT consulting, I’m here to ensure your devices run smoothly—whether it’s a home setup or a remote session. I bring a friendly, no-jargon approach to every session, making tech feel simple and stress-free.</p>
-    <p>Please feel free to contact me at <b>GoodPearComputer@gmail.com</b> or at <b>541-714-5864.</b></p>
+    <p>Hi, I’m Alex Leach. I'm an undergrad student at Oregon State University who is pursuing a Bachelor's Degree in Electrical & Computer Engineering. With over 10 years of Informational Technology (IT) experience, I have a strong background in computer hardware and software, networking, and troubleshooting.
+      <br>I started Good Pear Computer because I love technology and I want to help people. I was convinced on setting that goal after recieving overwhelming praise from my family and clients who referred to themselves as "dinosaurs".
+      <br>Regardless of your technical background, my goal is to provide friendly, reliable, and affordable tech support to help you get the most out of your devices.
+    </p>
+    <p>Please feel free to contact me at <b>GoodPearComputer@gmail.com</b> or at <b>541-714-5864.</b>
+      <br>I’m excited to work with you!
+    </p>
   </section>
+
 </body>
 </html>
